- Fixed bug #40286 (PHP fastcgi with PHP_FCGI_CHILDREN don't kill children when
  parent is killed). (Dmitry)
- Fixed bug #40236 (php -a function allocation eats memory). (Dmitry)
- Fixed bug #40109 (iptcembed fails on non-jfif jpegs). (Tony)
- Fixed bug #39836 (SplObjectStorage empty after unserialize). (Marcus)
- Fixed bug #39322 (proc_terminate() destroys process resource). (Nuno)
- Fixed bug #37799 (ftp_ssl_connect() falls back to non-ssl connection). (Nuno)
- Fixed bug #36496 (SSL support in imap_open() not working on Windows). (Edin)
- Fixed bug #34794 (proc_close() hangs when used with two processes).
  (jdolecek at netbsd dot org, Nuno)

08 Feb 2007, PHP 5.2.1
- Added read-timeout context option "timeout" for HTTP streams. (Hannes, Ilia). 
- Added CURLOPT_TCP_NODELAY constant to Curl extension. (Sara)
- Added support for hex numbers of any size. (Matt)
- Added function stream_socket_shutdown(). It is a wrapper for system 
  shutdown() function, that shut downs part of a full-duplex connection. 
  (Dmitry)
- Added internal heap protection (Dmitry)
  . memory-limit is always enabled (--enable-memory-limit removed)
  . default value if memory-limit is set to 128M
  . safe unlinking
  . cookies
  . canary protection (debug build only)
  . random generation of cookies and canaries
- Added forward support for 'b' prefix in front of string literals. (Andrei)
- Added three new functions to ext/xmlwriter (Rob, Ilia)
  . xmlwriter_start_dtd_entity()
  . xmlwriter_end_dtd_entity()
  . xmlwriter_write_dtd_entity()
- Added a meta tag to phpinfo() output to prevent search engines from indexing 
  the page. (Ilia)
- Added new function, sys_get_temp_dir(). (Hartmut)
- Added missing object support to file_put_contents(). (Ilia)
- Added support for md2, ripemd256 and ripemd320 algos to hash(). (Sara)
- Added forward support for (binary) cast. (Derick)
- Added optimization for imageline with horizontal and vertical lines (Pierre)
